Fix bullet points not aligned in chrome

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 }
 .home-list > *{
     margin-bottom:  20px;
+    list-style-position: inside;
 }
 
 .recipe-content{
